# hash-bench

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  justfile  lefthook.yml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy.yml  mobile.yml
benches/: hashmark.rs
mobile/: .gitignore  biome.json  index.html  package.json  vite.config.ts
mobile/src/: App.tsx  index.css  main.tsx
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/src/: lib.rs  main.rs
results/amd-7800x3d/: results.json
results/amd-7900x/1-threaded Hashing/1 KiB/report/: index.html
results/amd-7900x/1-threaded Hashing/100 MiB/report/: index.html
results/amd-7900x/1-threaded Hashing/BLAKE2b/report/: index.html
results/amd-7900x/1-threaded Hashing/BLAKE3/report/: index.html
results/amd-7900x/1-threaded Hashing/SHA-512/report/: index.html
results/amd-7900x/1-threaded Hashing/SHA3-256/report/: index.html
results/amd-7900x/1-threaded Hashing/SHA3-512/report/: index.html
results/amd-7900x/1-threaded Hashing/XXH32/report/: index.html
results/amd-7900x/1-threaded Hashing/report/: index.html
results/amd-7900x/12-threaded Hashing/10 MiB/report/: index.html
results/amd-7900x/12-threaded Hashing/100 MiB/report/: index.html
results/amd-7900x/12-threaded Hashing/BLAKE3/report/: index.html
results/amd-7900x/12-threaded Hashing/SHA-256/report/: index.html
results/amd-7900x/12-threaded Hashing/SHA-512/report/: index.html
results/amd-7900x/12-threaded Hashing/SHA3-256/report/: index.html
results/amd-7900x/12-threaded Hashing/Whirlpool/report/: index.html
results/amd-7900x/12-threaded Hashing/XXH3_128/report/: index.html
results/amd-7900x/12-threaded Hashing/XXH3_64/report/: index.html
results/amd-7900x/12-threaded Hashing/report/: index.html
results/amd-7900x/24-threaded Hashing/1 KiB/report/: index.html
results/amd-7900x/24-threaded Hashing/10 MiB/report/: index.html
results/amd-7900x/24-threaded Hashing/100 MiB/report/: index.html
results/amd-7900x/24-threaded Hashing/BLAKE2b/report/: index.html
results/amd-7900x/24-threaded Hashing/BLAKE3/report/: index.html
results/amd-7900x/24-threaded Hashing/CRC32/report/: index.html
results/amd-7900x/24-threaded Hashing/MD5/report/: index.html
results/amd-7900x/24-threaded Hashing/SHA-256/report/: index.html
results/amd-7900x/24-threaded Hashing/SHA-512/report/: index.html
results/amd-7900x/24-threaded Hashing/SHA3-256/report/: index.html
results/amd-7900x/24-threaded Hashing/SHA3-512/report/: index.html
results/amd-7900x/24-threaded Hashing/Tiger2/report/: index.html
results/amd-7900x/24-threaded Hashing/Whirlpool/report/: index.html
results/amd-7900x/24-threaded Hashing/XXH32/report/: index.html
results/amd-7900x/24-threaded Hashing/XXH3_128/report/: index.html
results/amd-7900x/24-threaded Hashing/XXH3_64/report/: index.html
results/amd-7900x/24-threaded Hashing/XXH64/report/: index.html
results/amd-7900x/24-threaded Hashing/report/: index.html
results/amd-7900x/report/: index.html
results/apple-m3-pro/: results.json
results/desktop/1-threaded Hashing/1 KiB/report/: index.html
results/desktop/1-threaded Hashing/10 MiB/report/: index.html
results/desktop/1-threaded Hashing/100 MiB/report/: index.html
results/desktop/1-threaded Hashing/CRC32/report/: index.html
results/desktop/1-threaded Hashing/Tiger2/report/: index.html
results/desktop/1-threaded Hashing/Whirlpool/report/: index.html
results/desktop/1-threaded Hashing/report/: index.html
results/desktop/4-threaded Hashing/1 KiB/report/: index.html
results/desktop/4-threaded Hashing/report/: index.html
results/desktop/64-threaded Hashing/1 KiB/report/: index.html
results/desktop/64-threaded Hashing/10 MiB/report/: index.html
results/desktop/64-threaded Hashing/100 MiB/report/: index.html
results/desktop/64-threaded Hashing/BLAKE2b/report/: index.html
results/desktop/64-threaded Hashing/BLAKE3/report/: index.html
results/desktop/64-threaded Hashing/CRC32/report/: index.html
results/desktop/64-threaded Hashing/MD5/report/: index.html
results/desktop/64-threaded Hashing/SHA-256/report/: index.html
results/desktop/64-threaded Hashing/SHA-512/report/: index.html
results/desktop/64-threaded Hashing/SHA3-256/report/: index.html
results/desktop/64-threaded Hashing/SHA3-512/report/: index.html
results/desktop/64-threaded Hashing/Tiger2/report/: index.html
results/desktop/64-threaded Hashing/Whirlpool/report/: index.html
results/desktop/64-threaded Hashing/report/: index.html
results/mbp-m3-36gb/1-threaded Hashing/10 MiB/report/: index.html
results/mbp-m3-36gb/1-threaded Hashing/100 MiB/report/: index.html
results/mbp-m3-36gb/1-threaded Hashing/report/: index.html
results/mbp-m3-36gb/12-threaded Hashing/report/: index.html
results/mbp-m3-36gb/report/: index.html
schema/: algorithms.v1.schema.json  algorithms.v2.schema.json  algorithms.v3.schema.json  results.v1.schema.json  results.v2.schema.json  results.v3.schema.json
src/: lib.rs  metadata.rs  registry.rs  verify.rs
src/algorithms/: adler.rs  ahash.rs  ascon.rs  blake2.rs  blake3.rs  cpu.rs  crc.rs  farmhash.rs  fnv.rs  fxhash.rs  highway.rs  kupyna.rs  md5.rs  mod.rs  murmur3.rs  ripemd.rs  sha1.rs  sha2.rs  sha3.rs  siphash.rs  sm3.rs  streebog.rs  whirlpool.rs  wyhash.rs  xxhash.rs
src/algorithms/crc/: hw.rs  mod.rs  soft.rs
src/algorithms/sha1/: mod.rs  sha_ext.rs  soft.rs
src/algorithms/sha2/: mod.rs  sha_ext.rs  soft.rs
src/algorithms/sha3/: mod.rs  soft.rs
src/bench/: harness.rs  mod.rs  report.rs
tests/: consistency.rs  metadata.rs
web/: biome.json  index.html  package.json  tsconfig.node.json  vite.config.ts
web/scripts/: process-results.ts
web/src/: App.tsx  main.tsx  types.ts
web/src/components/: BenchmarkChart.tsx  Controls.tsx  DataTable.tsx  HwVsSwChart.tsx  ThreadScalingChart.tsx  WinnersHeatmap.tsx  WinnersSummary.tsx
web/src/data/: algorithms.json
web/src/lib/: categories.ts  filter.ts  format.ts  stats.ts
(+3501 files in other folders)
