[package]
name = "hash-bench"
version = "0.1.0"
edition = "2021"
authors = ["Justin Chung"]
description = "Benchmark for hashing algorithms in Rust"
license = "MIT"

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.8.2", features = [
    "rayon",
    "digest",
    "prefer_intrinsics",
] }
crc32fast = "1.5.0"
criterion = { version = "0.7.0", features = ["csv_output", "html_reports"] }
hex-literal = "1.0.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
md-5 = "0.10.6"
num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
tiger = "0.2.1"
whirlpool = "0.10.4"
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64", "xxh3"] }

[[bench]]
name = "hashmark"
harness = false

[profile.bench]
lto = "fat"
codegen-units = 1
target-cpu = "native"
