[package]
name = "hash-bench"
version = "0.1.0"
edition = "2021"
authors = ["Justin Chung"]
description = "Benchmark for hashing algorithms in Rust"
license = "MIT"

[dependencies]
ahash = "0.8.12"
blake2 = "0.10.6"
blake3 = { version = "1.8.2", features = [
    "rayon",
    "digest",
    "prefer_intrinsics",
] }
crc32fast = "1.5.0"
criterion = { version = "0.7.0", features = ["csv_output", "html_reports"] }
gxhash = { version = "3.5.0", features = ["hybrid"] }
hex-literal = "1.0.0"
highway = "1.3.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
md-5 = "0.10.6"
metrohash = "1.0.7"
murmur3 = "0.5.2"
num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
ripemd = "0.1.3"
rustc-hash = "2.1.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
siphasher = "1.0.1"
sm3 = "0.4.0"
streebog = "0.10.2"
tiger = "0.2.1"
whirlpool = "0.10.4"
wyhash = "0.6.0"
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64", "xxh3"] }

[[bench]]
name = "hashmark"
harness = false

[profile.bench]
lto = "fat"
codegen-units = 1
