[package]
name = "hash-bench"
version = "0.1.0"
edition = "2021"
authors = ["Justin Chung"]
description = "Modular benchmark suite for hashing algorithms in Rust"
license = "MIT"

[lib]
name = "hash_bench"
path = "src/lib.rs"

[[bin]]
name = "hash-bench"
path = "src/bin/main.rs"
required-features = ["cli"]

[dependencies]
# Always present: the measurement engine, report serialization, and the CLI.
average = "0.17"
clap = { version = "4.5", features = ["derive"], optional = true }
num_cpus = "1.17.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hash algorithm crates — each optional, gated behind its family feature.
adler = { version = "1.0.2", optional = true }
ahash = { version = "0.8.12", optional = true }
ascon-hash = { version = "0.4.0", optional = true }
blake2 = { version = "0.10.6", optional = true }
blake3 = { version = "1.8.2", features = [
    "rayon",
    "digest",
    "prefer_intrinsics",
], optional = true }
crc32c = { version = "0.6.8", optional = true }
crc32fast = { version = "1.5.0", optional = true }
crc64fast = { version = "1.1.0", optional = true }
farmhash = { version = "1.1.2", optional = true }
fnv = { version = "1.0.7", optional = true }
highway = { version = "1.3.0", optional = true }
kupyna = { version = "0.1.0", optional = true }
md-5 = { version = "0.10.6", optional = true }
murmur3 = { version = "0.5.2", optional = true }
ripemd = { version = "0.1.3", optional = true }
rustc-hash = { version = "2.1.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
sha3 = { version = "0.10.8", optional = true }
siphasher = { version = "1.0.1", optional = true }
sm3 = { version = "0.4.0", optional = true }
streebog = { version = "0.10.2", optional = true }
whirlpool = { version = "0.10.4", optional = true }
wyhash = { version = "0.6.0", optional = true }
xxhash-rust = { version = "0.8.12", features = [
    "xxh32",
    "xxh64",
    "xxh3",
], optional = true }

[features]
# All algorithm families plus the CLI binary.
default = [
    "blake3",
    "blake2",
    "sha1",
    "sha2",
    "sha3",
    "md5",
    "ripemd",
    "sm3",
    "streebog",
    "kupyna",
    "whirlpool",
    "ascon",
    "crc",
    "xxhash",
    "siphash",
    "ahash",
    "wyhash",
    "fxhash",
    "farmhash",
    "murmur3",
    "highway",
    "fnv",
    "adler",
    "cli",
]

# The `hash-bench` command-line binary.
cli = ["dep:clap"]

# One feature per algorithm family. Feature names are stable and may differ
# from crate names (md5, fxhash, crc).
blake3 = ["dep:blake3"]
blake2 = ["dep:blake2"]
sha1 = ["dep:sha1"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
md5 = ["dep:md-5"]
ripemd = ["dep:ripemd"]
sm3 = ["dep:sm3"]
streebog = ["dep:streebog"]
kupyna = ["dep:kupyna"]
whirlpool = ["dep:whirlpool"]
ascon = ["dep:ascon-hash"]
crc = ["dep:crc32fast", "dep:crc32c", "dep:crc64fast"]
xxhash = ["dep:xxhash-rust"]
siphash = ["dep:siphasher"]
ahash = ["dep:ahash"]
wyhash = ["dep:wyhash"]
fxhash = ["dep:rustc-hash"]
farmhash = ["dep:farmhash"]
murmur3 = ["dep:murmur3"]
highway = ["dep:highway"]
fnv = ["dep:fnv"]
adler = ["dep:adler"]

[profile.release]
lto = "fat"
codegen-units = 1
